app_yaml/userlist_yaml/istio_deploy/11.userlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userlist
  labels:
    app: userlist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userlist
  template:
    metadata:
      labels:
        app: userlist
      #annotations:
      #  sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: userlist
        image: ssongman/userlist:v1
        #image: ktis-bastion01.container.ipc.kt.com:5000/ssongman/userlist:v1
        ports:
        - containerPort: 8181
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 8181
        #  #initialDelaySeconds: 5
        #  periodSeconds: 1
