app_yaml/userlist_yaml/istio_deploy/12.userlist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userlist-svc
  labels:
    app: userlist
spec:
  selector:
    app: userlist
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8181
  sessionAffinity: None
  type: ClusterIP
