app_yaml/userlist_yaml/istio_deploy/13.userlist-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userlist-gateway
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    #- "*"
    #- "userlist.ipc.kt.com"
    - "userlist-song.ktdscoe.myds.me"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userlist-virtualserivce
spec:
  hosts:
  #- "*"
  #- "userlist.ipc.kt.com"
  - "userlist-song.ktdscoe.myds.me"
  gateways:
  - userlist-gateway
  http:
  - match:
    - uri:
        prefix: /
        #exact: /
    route:
    - destination:
        host: userlist-svc
        port:
          number: 80
#  trafficPolicy:
#    loadBalancer:
#      consistentHash:
#        useSourceIp: false          # true: sticky session ,  false: LB
